--- a/AppServices/WebAPIService/ClientApp/src/index.html
+++ b/AppServices/WebAPIService/ClientApp/src/index.html
@@ -23,19 +23,20 @@
     <link rel="apple-touch-icon" sizes="76x76" href="./assets/img/apple-icon.png" />
     <link rel="icon" type="image/png" href="./assets/img/favicon.png" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-
+    <meta name="theme-color" content="#1976d2">
     <title>Web API Angular Client</title>
 
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
     <meta name="viewport" content="width=device-width" />
 
     <!--     Fonts and icons     -->
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
-    <link href='https://fonts.googleapis.com/css?family=Roboto:400,700,300|Material+Icons' rel='stylesheet' type='text/css'>
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">    
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=YOUR-KEY-HERE"></script>
 
 </head>
-<body>
+<body  class="mat-typography">
   <app-root>
     <div class="loader">
       <svg class="circular" viewBox="25 25 50 50">
@@ -43,6 +44,7 @@
       </svg>
     </div>
   </app-root>
+  <noscript>Please enable JavaScript to continue using this application.</noscript>
 </body>
 
 
